typescript/checker/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            39,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts:2:5
  |
2 | var STRING: string;
  |     ^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            256,
        ),
        hi: BytePos(
            257,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts:15:16
   |
15 | var objA = new A();
   |                ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1123,
        ),
        hi: BytePos(
            1124,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts:47:5
   |
47 | var z: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1138,
        ),
        hi: BytePos(
            1139,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts:48:5
   |
48 | var x: string[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1155,
        ),
        hi: BytePos(
            1156,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/typeofOperator/typeofOperatorWithStringType.ts:49:5
   |
49 | var r: () => string;
   |     ^

